<?xml version="1.0"?>
<package>
  <name>graspit_commander</name>
  <version>0.1.0</version>
  <description>Python client for RPS GraspitInterface</description>

  <author email="jbw2140@columbia.edu">Jared Weiss</author>
  <author email="jakevarley@gmail.com">Jake Varley</author>


  <maintainer email="jbw2140@columbia.edu">Jared Weiss</maintainer>
  <maintainer email="jakevarley@gmail.com">Jake Varley</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>python</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>python</run_depend>

</package>
